@@ -983,6 +983,8 @@ class PPFrame_DOM implements PPFrame {
 	 */
 	var $depth;
 
+	private $volatile = false;
+
 	/**
 	 * Construct a new preprocessor frame.
 	 * @param Preprocessor $preprocessor The parent preprocessor
@@ -1467,6 +1469,24 @@ class PPFrame_DOM implements PPFrame {
 	function getTitle() {
 		return $this->title;
 	}
+
+	/**
+	 * Set the volatile flag
+	 *
+	 * @param bool $flag
+	 */
+	function setVolatile( $flag = true ) {
+		$this->volatile = $flag;
+	}
+
+	/**
+	 * Get the volatile flag
+	 *
+	 * @return bool
+	 */
+	function isVolatile() {
+		return $this->volatile;
+	}
 }
 
 /**
@@ -1602,6 +1622,11 @@ class PPTemplateFrame_DOM extends PPFrame_DOM {
 	 */
 	function isTemplate() {
 		return true;
+	}
+
+	function setVolatile( $flag = true ) {
+		parent::setVolatile( $flag );
+		$this->parent->setVolatile( $flag );
 	}
 }
 
